2010-10-05  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Chris Fleizach.

        [Gtk] CSS font-style: italic behavior
        https://bugs.webkit.org/show_bug.cgi?id=33299

        Added a test to test the FontConfig synthetic oblique behavior.

        * platform/gtk/fonts/fontconfig-synthetic-oblique-expected.checksum: Added.
        * platform/gtk/fonts/fontconfig-synthetic-oblique-expected.png: Added.
        * platform/gtk/fonts/fontconfig-synthetic-oblique-expected.txt: Added.
        * platform/gtk/fonts/fontconfig-synthetic-oblique.html: Added.
2010-10-05  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Chris Fleizach.

        [Gtk] CSS font-style: italic behavior
        https://bugs.webkit.org/show_bug.cgi?id=33299

        Properly interpret the FC_MATRIX property from a FontConfig pattern.
        FontConfig will use this property when returning fonts which have a
        synthetic oblique variant configured in the fonts.conf configuration
        file.

        Test: platform/gtk/fonts/fontconfig-synthetic-oblique.html

        * platform/graphics/cairo/FontPlatformDataFreeType.cpp:
        (WebCore::FontPlatformData::FontPlatformData): Added a constructor that
        takes an existing FontPlatformData and a font size.
        (WebCore::FontPlatformData::initializeWithFontFace): Added this helper
        intialization method that properly handles the FC_MATRIX property from
        the FcPattern.
        * platform/graphics/cairo/FontPlatformDataFreeType.h: Added a declaration
        to the new constructor and the initializeWithFontFace.
        * platform/graphics/cairo/SimpleFontDataCairo.cpp:
        (WebCore::SimpleFontData::smallCapsFontData): Use the new FontPlatformData
        constructor.

Canonical link: https://commits.webkit.org/59921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69320 268f45cc-cd09-0410-ab3c-d52691b4dbfc